[project]
name = "barexam"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kadoyau", email = "11990327+kadoyau@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/barexam"]
